# Advanced-C-Final

./: .gitignore  CMakeLists.txt  README.md  linked_list.c
Unity/auto/: unity_test_summary.rb
Unity/test/tests/: testunity.c
src/lib/: linked_list.h  test_linked_list.c
src/main/c/lib/: linked_list.c  linked_list.h
